*feat AppHeader *feat AppSidebar

--- a/packages/ui/src/AppHeader/SelectCluster/SelectCluster.module.scss
+++ b/packages/ui/src/AppHeader/SelectCluster/SelectCluster.module.scss
@@ -23,7 +23,7 @@ $selectFieldIndicators: ':global .hz-select-field__indicators';
       color: c.$colorTextSecondary;
       background-color: transparent;
 
-      #{$selectValueContainer},
+      #{$selectValue},
       #{$selectTrailingNote},
       #{$selectFieldIndicators} svg {
         color: c.$colorTextSecondary;
