--- a/packages/ui/src/AppSidebar/AppSidebarSection/AppSidebarSection.module.scss
+++ b/packages/ui/src/AppSidebar/AppSidebarSection/AppSidebarSection.module.scss
@@ -13,6 +13,7 @@ $sideBarMenuSectionTransitionMaxHeight: 1000px;
 
   h3 {
     margin: 0;
+    color: c.$colorNeutralLight;
     font-size: c.$fontSizeBodySmall;
   }
 }
