--- a/packages/ui/src/AppSidebar/AppSidebarSection/AppSidebarSection.module.scss
+++ b/packages/ui/src/AppSidebar/AppSidebarSection/AppSidebarSection.module.scss
@@ -19,7 +19,7 @@ $sideBarMenuSectionTransitionMaxHeight: 1000px;
 }
 
 .collapsed {
-  border-color: c.$colorNeutralLighter;
+  border-color: c.$colorNeutralLight;
 
   h3 {
     display: none;
