--- a/packages/ui/src/AppHeader/SelectCluster/SelectCluster.module.scss
+++ b/packages/ui/src/AppHeader/SelectCluster/SelectCluster.module.scss
@@ -3,6 +3,7 @@
 
 $selectContainer: ':global .hz-select-field';
 $selectControl: ':global .hz-select-field__control';
+$selectInputContainer: ':global .hz-select-field__input-container';
 $selectValueContainer: ':global .hz-select-field__value-container';
 $selectTrailingNote: ':global .hz-select-field__trailing-note';
 $selectValue: ':global .hz-select-field__single-value';
@@ -36,6 +37,7 @@ $selectFieldIndicators: ':global .hz-select-field__indicators';
     background: none;
     border-radius: unset;
 
+    #{$selectInputContainer},
     #{$selectValueContainer},
     #{$selectTrailingNote} {
       color: c.$colorNeutralLighter;
