*feat tooltip secondary color *style app select cluster border

--- a/packages/ui/src/AppHeader/SelectCluster/SelectCluster.module.scss
+++ b/packages/ui/src/AppHeader/SelectCluster/SelectCluster.module.scss
@@ -33,9 +33,9 @@ $selectFieldIndicators: ':global .hz-select-field__indicators';
   }
 
   #{$selectControl} {
-    border: none;
     background: none;
-    border-radius: unset;
+    border-radius: c.$borderRadius;
+    border: 1px solid c.$colorTextSecondary;
 
     #{$selectInputContainer},
     #{$selectValueContainer},
