*fix app components adjustments

--- a/packages/ui/src/AppHeader/AppHeader.module.scss
+++ b/packages/ui/src/AppHeader/AppHeader.module.scss
@@ -8,6 +8,7 @@
   height: 59px;
   box-sizing: border-box;
   flex-direction: row;
+  font-size: c.$fontSizeBodySmall;
   width: 100%;
   padding: 0 c.$grid * 5;
   overflow-x: auto;
