--- a/packages/ui/src/AppSidebar/AppSidebar.module.scss
+++ b/packages/ui/src/AppSidebar/AppSidebar.module.scss
@@ -49,7 +49,7 @@ $offset: c.$grid * 4;
     margin-top: auto;
     word-break: break-all;
     padding: 0 c.$grid * 4 c.$grid * 2.5;
-    font-size: c.$fontSizeBodySmall;
+    font-size: c.$fontSizeBodySmaller;
   }
 
   &.collapsed {
