*chore bump css and scss deps

--- a/packages/ui/src/Alert.module.scss
+++ b/packages/ui/src/Alert.module.scss
@@ -124,6 +124,7 @@
 
         &:hover,
         &.hover {
+          /* doiuse-disable text-decoration */
           text-decoration: underline solid;
         }
 
