--- a/packages/ui/src/Card.module.scss
+++ b/packages/ui/src/Card.module.scss
@@ -50,7 +50,7 @@
 
   .caption {
     display: flex;
-    margin: (-$padding) (-$padding) $padding (-$padding);
+    margin: (-$padding) (-$padding) $padding;
 
     & > * {
       flex: 1;
