--- a/packages/ui/src/Link.module.scss
+++ b/packages/ui/src/Link.module.scss
@@ -16,6 +16,7 @@
   &.focus,
   &:active,
   &.active {
+    /* doiuse-disable text-decoration */
     text-decoration: underline solid;
     outline: transparent solid c.$outlineWidth;
   }
