--- a/packages/ui/src/AppSidebar/AppSidebar.module.scss
+++ b/packages/ui/src/AppSidebar/AppSidebar.module.scss
@@ -33,7 +33,7 @@ $offset: c.$grid * 4;
   .wrapper {
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+    overflow: auto;
     overflow-x: hidden;
   }
 
