--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
@@ -174,12 +175,12 @@
       &.hover,
       &:focus-visible,
       &.focus {
-        @include buttonColor(lighten(c.$colorBrand, 20%));
+        @include buttonColor(color.adjust(c.$colorBrand, $lightness: 20%));
       }
 
       &:active,
       &.active {
-        @include buttonColor(darken(c.$colorBrand, 10%));
+        @include buttonColor(color.adjust(c.$colorBrand, $lightness: -10%));
       }
 
       &.variantContained {
@@ -198,12 +199,12 @@
       &.hover,
       &:focus-visible,
       &.focus {
-        @include buttonColor(lighten(c.$authPrimary, 10%));
+        @include buttonColor(color.adjust(c.$authPrimary, $lightness: 10%));
       }
 
       &:active,
       &.active {
-        @include buttonColor(darken(c.$authPrimary, 10%));
+        @include buttonColor(color.adjust(c.$authPrimary, $lightness: -10%));
       }
 
       &.variantContained {
@@ -224,12 +225,12 @@
       &.hover,
       &:focus-visible,
       &.focus {
-        @include buttonColor(lighten(c.$authSecondary, 10%));
+        @include buttonColor(color.adjust(c.$authSecondary, $lightness: 10%));
       }
 
       &:active,
       &.active {
-        @include buttonColor(darken(c.$authSecondary, 10%));
+        @include buttonColor(color.adjust(c.$authSecondary, $lightness: -10%));
       }
 
       &.variantContained {
