--- a/packages/ui/src/Modal.module.scss
+++ b/packages/ui/src/Modal.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
@@ -14,7 +15,7 @@
 .overlay {
   width: 100%;
   height: 100%;
-  background-color: transparentize(c.$colorText, 0.2);
+  background-color: color.adjust(c.$colorText, $alpha: -0.2);
   pointer-events: all;
 }
 
