--- a/packages/ui/src/Overlay.module.scss
+++ b/packages/ui/src/Overlay.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
@@ -14,7 +15,7 @@
 }
 
 .modal {
-  background: transparentize(c.$colorOverlayBackground, 0.1);
+  background: color.adjust(c.$colorOverlayBackground, $alpha: -0.1);
   width: 100vw;
   height: 100vh;
   z-index: c.$zIndex1000;
