--- a/packages/ui/src/Card.module.scss
+++ b/packages/ui/src/Card.module.scss
@@ -1,8 +1,8 @@
 @use '../styles/constants' as c;
 
-.wrapper {
-  $padding: c.$grid * 5;
+$padding: c.$grid * 5;
 
+.wrapper {
   background: c.$colorNeutralWhite;
 
   .heading {
@@ -44,49 +44,49 @@
     }
   }
 
-  &.bordered {
-    padding: $padding;
-    border-radius: c.$borderRadius;
-    border: c.$borderWidth solid c.$colorNeutral;
-
-    .heading {
-      @include c.typographyH3;
-
-      display: flex;
-      align-items: center;
-      margin: 0;
-
-      .icon {
-        margin-right: c.$grid * 2.5;
-      }
-
-      .title {
-        margin: 0;
-        font-size: c.$fontSizeBodyNormal !important;
-        line-height: c.$lineHeightBodyNormal !important;
-
-        &.space {
-          margin-right: c.$grid * 2.5;
-        }
-      }
-    }
-
-    .content {
-      @include c.typographyBodyNormal;
-
-      margin-top: c.$grid * 4;
-      padding: 0;
-    }
-
-    .caption {
-      margin: (-$padding) (-$padding) $padding;
-    }
-  }
-
   &.noTitle {
     .content {
       margin-top: 0;
       padding-top: 0;
     }
+  }
+}
+
+.bordered {
+  padding: $padding;
+  border-radius: c.$borderRadius;
+  border: c.$borderWidth solid c.$colorNeutral;
+
+  .heading {
+    @include c.typographyH3;
+
+    display: flex;
+    align-items: center;
+    margin: 0;
+
+    .icon {
+      margin-right: c.$grid * 2.5;
+    }
+
+    .title {
+      margin: 0;
+      font-size: c.$fontSizeBodyNormal !important;
+      line-height: c.$lineHeightBodyNormal !important;
+
+      &.space {
+        margin-right: c.$grid * 2.5;
+      }
+    }
+  }
+
+  .content {
+    @include c.typographyBodyNormal;
+
+    margin-top: c.$grid * 4;
+    padding: 0;
+  }
+
+  .caption {
+    margin: (-$padding) (-$padding) $padding;
   }
 }
