--- a/packages/ui/src/Card.module.scss
+++ b/packages/ui/src/Card.module.scss
@@ -43,12 +43,12 @@ $padding: c.$grid * 5;
       flex: 1;
     }
   }
+}
 
-  &.noTitle {
-    .content {
-      margin-top: 0;
-      padding-top: 0;
-    }
+.noTitle {
+  .content {
+    margin-top: 0;
+    padding-top: 0;
   }
 }
 
