*feat updated colors and gradients *fix table column height

--- a/packages/ui/src/AppHeader/AppHeaderMenu/AppHeaderMenu.module.scss
+++ b/packages/ui/src/AppHeader/AppHeaderMenu/AppHeaderMenu.module.scss
@@ -12,7 +12,7 @@
 .content {
   padding: c.$grid * 2;
   color: c.$colorNeutralLighter;
-  background: c.$brandSecondary;
+  background: c.$colorBrandSecondary;
   display: flex;
   flex-direction: column;
   align-items: start;
