--- a/packages/ui/src/AppHeader/AppHeader.module.scss
+++ b/packages/ui/src/AppHeader/AppHeader.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/constants' as c;
 
 .root {
-  background: c.$brandSecondary;
+  background: c.$colorBrandSecondary;
   color: c.$colorNeutralLighter;
   display: flex;
   align-items: center;
@@ -17,7 +17,7 @@
 }
 
 .name {
-  color: c.$brandPrimary;
+  color: c.$colorBrandPrimary;
   font-weight: 600;
 }
 
