*feat updated colors and gradients *fix table column height

--- a/packages/ui/styles/helpers/_gradients.scss
+++ b/packages/ui/styles/helpers/_gradients.scss
@@ -1,7 +1,7 @@
 @use '../constants' as c;
 
 @mixin textGradient() {
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
