--- a/packages/ui/styles/helpers/_gradients.scss
+++ b/packages/ui/styles/helpers/_gradients.scss
@@ -1,8 +1,12 @@
 @use '../constants' as c;
 
 @mixin textGradient() {
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+  @supports (background-clip: text) {
+    /* doiuse-disable background-clip-text */
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* doiuse-enable background-clip-text */
+  }
 }
 
 @mixin gradientLime($angle: 270deg) {
