*feat zebra stripes and reduced height of table rows.

--- a/packages/ui/src/Table/Row.module.scss
+++ b/packages/ui/src/Table/Row.module.scss
@@ -4,6 +4,10 @@
 @mixin rowBase {
   display: flex;
   width: 100%;
+
+  &:nth-child(even) {
+    background-color: c.$colorNeutralLighter;
+  }
 }
 
 .row {
