--- a/packages/ui/styles/helpers/_gradients.scss
+++ b/packages/ui/styles/helpers/_gradients.scss
@@ -17,7 +17,7 @@
 }
 
 @mixin gradientOcean($angle: 270deg) {
-  background: linear-gradient($angle, c.$colorText 0%, #116884 89%);
+  background: linear-gradient($angle, #116884, c.$colorText);
 }
 
 @mixin textGradientOcean($angle: 0deg) {
