add version picker

--- a/src/components/Terminal.module.scss
+++ b/src/components/Terminal.module.scss
@@ -71,7 +71,7 @@
 }
 
 .commandRes {
-  color: c.$colorSuccessDark;
+  color: c.$colorSuccessDarkest;
   margin: 0;
   margin-bottom: c.$grid * 3;
 
