--- a/src/components/Select/SelectField.module.scss
+++ b/src/components/Select/SelectField.module.scss
@@ -174,6 +174,10 @@ $selectGroupHeading: ':global .hz-select-field__group-heading';
     &:last-child {
       border-radius: 0 0 c.$borderRadius c.$borderRadius;
     }
+
+    &:only-child {
+      border-radius: c.$borderRadius;
+    }
   }
 
   #{$selectOption}--is-focused {
